expected/main/core/bitdata/bitdata22.err
ERROR: "actual/main/core/bitdata/bitdata22.lc", line 2
bitdata Dov   = Dov [ x :: Dov ]        -- invalid, for prev
^
Unable to determine a unique BitSize value for Dov

ERROR: "actual/main/core/bitdata/bitdata22.lc", line 1
bitdata Div/5 = Div [ p, q :: Dov ]
                ^
Cannot satisfy constraint 2 Size(Dov) = 5

ERROR: Aborting after 2 previously reported errors

